--- a/client/src/style/Project.scss
+++ b/client/src/style/Project.scss
@@ -26,8 +26,9 @@
         box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
         border-radius: 8px;
         background-color: #e7deeb;
-        box-shadow: inset 4px -2px 41px -5px rgba(201, 95, 95, 0.75);
-        box-shadow: 1px 2px 10px 3px rgba(113, 153, 175, 0.75);
+        // box-shadow: inset 4px -2px 41px -5px rgba(201, 95, 95, 0.75);
+        box-shadow: inset 4px -2px 45px -5px rgba(10, 10, 10, 0.9);
+        // box-shadow: 1px 2px 10px 3px rgba(76, 160, 206, 0.75);
 
         form {
             margin-top: 3rem;
@@ -92,7 +93,7 @@
 // single project
 .single-project-container-outer{
     width: 100vw;
-    background-image: url(../img/collage.jpg);
+    // background-image: url(../img/collage.jpg);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -101,12 +102,17 @@
     padding: 1rem;
 
     .single-project-container{
+        display: flex;
+        flex-direction: column;
         padding: 1rem;
 
         .project-title{
+            width: 35rem;
+            margin-top: -2.5rem;
             padding: 0.5rem;
-            background-color: rgba(255, 255, 255,0.8);
-            color: #000;
+            // background-color: rgba(255, 255, 255,0.7);
+            // color: #000;
+            color: #fff;
             padding: 1rem;
         }
 
@@ -143,13 +149,17 @@
         }
     }
 
-    a {
+    .back-btn {
+        width: 8.9rem;
+        align-self: flex-end;
+        font-family: 'Staatliches', cursive;
+        letter-spacing: 0.05em;
         color: #000;
         text-decoration: none;
         border: 1px solid #000;
         border-radius: 5px;
         padding: 0.2rem 0.5rem;
-        background-color: rgba(255, 255, 255,0.8);
+        background-color: rgba(224, 221, 221, 0.8);
         border: 1px solid #fff;
         &:hover {
             color: #fff;
@@ -158,14 +168,19 @@
     }
 
     .track {
+        margin-top: -1.5rem;
         // border: 1px solid #000;
         padding: 1rem 2rem;
-        background-color: rgba(241, 236, 236, 0.5);
+        background-color: rgba(238, 237, 237, 0.7);
         box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
     }
     .btn-delete-project {
+        align-self: flex-end;
+        font-family: 'Staatliches', cursive;
+        letter-spacing: 0.08em;
         background-color: rgb(90, 3, 3);
-        border: 1px solid rgb(104, 103, 103);
+        // border: 1px solid rgb(104, 103, 103);
+        border: 1px solid rgba(202, 200, 200,0.5);
         &:hover {
             background-color: rgba(90, 3, 3,0.5);
         }
