--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -707,3 +707,11 @@ form {
     color: rgb(241, 240, 240);
     text-shadow: 0 0 5px black;
 }
+
+// user found by searching
+.user-found {
+    padding: 1rem 0.5rem 1.5rem 0.5rem;
+    border-radius: 8px;
+    background-color: rgba(206, 202, 202, 0.8);
+    box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+}
