--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -26,7 +26,6 @@ nav {
     box-shadow: 0px 10px 15px -5px rgba(0, 0, 0, 0.7);
     // box-shadow: 0px 10px 15px -1px rgba(7, 7, 7, 0.8);
     z-index: 1;
-    
     ul {
         display: flex;
         flex-direction: row;
@@ -52,11 +51,10 @@ nav {
     .nav-li-div {
         display: flex;
     }
-     .nav-item-left{
-            position: absolute;
-            right: 4.5rem;
-        }
-
+    .nav-item-left {
+        position: absolute;
+        right: 4.5rem;
+    }
     // link hover effect
     a.middle {
         position: relative;
@@ -87,12 +85,12 @@ nav {
     justify-content: center;
     align-items: center;
     // background-color: rgba(241, 236, 236, 0.5);
-//     background: rgb(111,134,173);
-// background: radial-gradient(circle, rgba(111,134,173,0.9724089464887518) 0%, rgba(3,4,29,1) 83%);
-// background: rgb(70,149,172);
-// background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(3,4,29,1) 83%);
-background: rgb(70,149,172);
-background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
+    //     background: rgb(111,134,173);
+    // background: radial-gradient(circle, rgba(111,134,173,0.9724089464887518) 0%, rgba(3,4,29,1) 83%);
+    // background: rgb(70,149,172);
+    // background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(3,4,29,1) 83%);
+    background: rgb(70, 149, 172);
+    background: radial-gradient(circle, rgba(70, 149, 172, 1) 0%, rgba(1, 1, 13, 1) 87%);
 }
 
 // home components
@@ -342,13 +340,14 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
         background-color: rgba(12, 11, 11, 0.9);
         border-top: 3px solid #4695ac;
         border-bottom: 3px solid rgb(122, 90, 141);
-
         input {
             margin: 0.5rem;
             // padding: 0.2rem 3rem;
             letter-spacing: 0.05em;
         }
-        input[type='text'], input[type='email'],input[type='password'] {
+        input[type='text'],
+        input[type='email'],
+        input[type='password'] {
             width: 15rem;
         }
         span {
@@ -371,8 +370,7 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
 }
 
 // register form
-.register-form-container{
-
+.register-form-container {
     .register-form {
         .radio-btns {
             display: flex;
@@ -433,7 +431,6 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
         // text-shadow: 
         //     -1px -1px 1px rgb(43, 44, 44), 
         //     1px 1px 1px rgb(3, 1, 12);
-
         // width: 89vw;
         // text-align: center;
         // padding: 0.3rem 0.5rem;
@@ -476,16 +473,13 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
                 color: #000;
             }
         }
-
         .view {
             margin-top: 1rem;
         }
     }
-
     .musician:hover {
         transform: scale(1.1, 1.1);
     }
-
     .musician-profile-container {
         width: 20rem;
         padding: 1rem 0.5rem 1.5rem 0.5rem;
@@ -508,7 +502,6 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
             border-radius: 10px;
         }
     }
-
 }
 
 // account
@@ -534,13 +527,12 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
         flex-direction: row;
         align-self: flex-end;
         margin-right: 3.5rem;
-        background-color: rgba(187, 185, 185, 0.8);
-        box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+        background-color: rgba(98, 98, 100, 0.7);
+        // box-shadow: 0px 2px 12px 0px rgb(179, 179, 187);
         border-radius: 10px;
         h2 {
             color: #000;
         }
-
         .account {
             width: 19vw;
             padding-left: 2rem;
@@ -566,13 +558,12 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
                 color: #000;
                 line-height: 1.3em;
                 &:hover {
-                   color:#234a5f;
+                    color: rgb(204, 197, 197);
                 }
             }
-            a:nth-child(2){
+            a:nth-child(2) {
                 padding-bottom: 0.5rem;
             }
-            
             i {
                 margin-right: 0.5rem;
             }
@@ -622,10 +613,9 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
     height: 3.5rem;
 }
 
-
 // form general
 form {
-    input{
+    input {
         border-radius: 5px;
         border: 1px solid rgb(48, 48, 48);
         padding: 0.3rem 0.5rem;
@@ -644,10 +634,9 @@ form {
     border-radius: 5px;
     margin-top: 1rem;
     padding: 0.3rem 0.7rem;
-
-    &:hover{
+    &:hover {
         // background-color:rgba(122, 90, 141,0.5);
-        background-color: rgba(70, 149, 172,0.8);
+        background-color: rgba(70, 149, 172, 0.8);
     }
 }
 
@@ -668,7 +657,7 @@ form {
     border: 1px solid rgba(36, 36, 36, 0.5);
     border-radius: 5px;
     &:hover {
-        background-color: rgba(90, 3, 3,0.5);
+        background-color: rgba(90, 3, 3, 0.5);
     }
 }
 
@@ -679,12 +668,12 @@ form {
     color: #000 !important;
     border: 1px solid #000;
     border-radius: 5px;
-    &:hover{
-        background-color: rgba(70, 149, 172,0.8);
+    &:hover {
+        background-color: rgba(70, 149, 172, 0.8);
     }
 }
 
-//
+// link for mailto
 .btn-link-mailto {
     font-family: 'Staatliches', cursive;
     letter-spacing: 0.05em;
@@ -695,12 +684,12 @@ form {
     padding: 0.2rem 0.5rem;
     background-color: rgba(243, 237, 237, 0.7);
     &:hover {
-        background-color: rgba(70, 149, 172,0.8);
+        background-color: rgba(70, 149, 172, 0.8);
     }
 }
 
-// 
-.heading{
+// pages heading
+.heading {
     font-size: 2rem;
     font-family: 'Staatliches', cursive;
     letter-spacing: 0.1em;
