--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -130,10 +130,38 @@ nav {
         box-shadow: 0px 10px 15px -5px rgba(15, 15, 15, 0.75);
         // search container
         .search-container {
-            position: absolute;
-            top: 13.5rem;
-            right: 2rem;
+            .txt-test{
+                color: green;
+            }
+            .search-overlay{
+                width: 100vw;
+                height: 100vh;
+                background-color: rgba(20, 20, 20, 0.8);
+            }
+            // user found by searching
+            .user-found {
+                width: 18rem;
+                position: absolute;
+                top: 20rem;
+                left: 30rem;
+                text-align: center;
+                padding: 1rem 0.5rem 1.5rem 0.5rem;
+                border-radius: 8px;
+                background-color: rgba(231, 226, 226, 0.8);
+                box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+
+                .close-user {
+                    position: absolute;
+                    top: 1rem;
+                    right: 2rem;
+                    font-weight: bold;
+                }
+            }
+        
             form {
+                position: absolute;
+                top: 13.5rem;
+                right: 2rem;
                 input {
                     color: black;
                     padding: 0.3rem 0.5rem;
@@ -695,12 +723,4 @@ form {
     letter-spacing: 0.1em;
     color: rgb(241, 240, 240);
     text-shadow: 0 0 5px black;
-}
-
-// user found by searching
-.user-found {
-    padding: 1rem 0.5rem 1.5rem 0.5rem;
-    border-radius: 8px;
-    background-color: rgba(206, 202, 202, 0.8);
-    box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
 }
