--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -102,7 +102,8 @@ nav {
         h1 {
             font-family: 'Orbitron', sans-serif;
             font-size: 1.3em;
-            letter-spacing: 1.1em;
+            letter-spacing: 1.2em;
+            font-weight: 700;
             text-align: center;
             color: rgb(90, 90, 90);
             text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
@@ -734,4 +735,80 @@ form {
     position: relative;
     top: 17rem;
     right: 22rem;
+}
+
+// services
+.service-container{
+    p {
+        margin-top: -1rem;
+        color: #fff;
+    }
+    .service-offer {
+        width: 50rem;
+        margin: 2rem 0rem;
+        padding: 3rem 2rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        background-color: rgba(230, 225, 225, 0.5);
+        box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+        border-radius: 5px;
+
+         p {
+            color: #000;
+        }
+
+        .services {
+            width: 20rem;
+            a {
+                font-size: 1.3em;
+                color: rgb(37, 37, 37);
+
+                &:hover{
+                    color: rgb(255, 254, 254);
+                }
+            }
+
+            i {
+                padding-right: 0.5rem;
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+// support
+.support-container {
+    width: 50rem;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
+    p {
+        color: #fff;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 1.5rem 0rem 1rem 0rem;
+        padding: 1rem 3rem;
+        align-items: center;
+        background-color: rgba(230, 225, 225, 0.5);
+        box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+        border-radius: 5px;
+
+        input {
+            margin: 0.5rem;
+        }
+
+        textarea{
+            border-radius: 5px;
+            resize: none; 
+        }
+    }
 }
