--- a/client/src/style/Project.scss
+++ b/client/src/style/Project.scss
@@ -12,7 +12,6 @@
     height: 90vh;
     margin-top: 2rem;
     padding-bottom: 2rem;
-    background-image: url(../img/collage.jpg);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,10 +24,9 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
         border-radius: 8px;
-        background-color: rgba(167, 169, 172, 0.7);
-        box-shadow: inset 4px -2px 45px -5px rgba(10, 10, 10, 0.9);
+        background-color: rgba(68, 65, 82, 0.7);
+        box-shadow: inset 4px -2px 45px -5px rgba(121, 118, 118, 0.9);
         form {
             margin-top: 3rem;
             display: flex;
@@ -62,7 +60,7 @@
                 color: #000;
                 padding: 0rem 0.3rem;
                 &:hover {
-                    color: #1a2e5a;
+                    color: #071a42;
                 }
             }
             // link hover effect
@@ -87,7 +85,7 @@
             }
         }
         li:nth-child(odd) {
-            background-color: rgba(152, 152, 156, 0.7);
+            background-color: rgba(152, 152, 156, 0.2);
         }
     }
 }
