--- a/client/src/style/Project.scss
+++ b/client/src/style/Project.scss
@@ -25,8 +25,8 @@
         justify-content: center;
         align-items: center;
         border-radius: 8px;
-        background-color: rgba(68, 65, 82, 0.7);
-        box-shadow: inset 4px -2px 45px -5px rgba(121, 118, 118, 0.9);
+        background-color: rgba(184, 181, 199, 0.7);
+        box-shadow: inset 4px -2px 45px -5px rgba(77, 70, 70, 0.9);
         form {
             margin-top: 3rem;
             display: flex;
@@ -60,7 +60,7 @@
                 color: #000;
                 padding: 0rem 0.3rem;
                 &:hover {
-                    color: #071a42;
+                    color: #27385c;
                 }
             }
             // link hover effect
